# Neue_Konzepte_Portfolio

./: .gitignore  README.md  pyproject.toml
data/: tweet_emotion.parquet
notebooks/: 0_load-and-parse-datasets.ipynb  1_Business-Understanding.ipynb  2_Data-Understanding.ipynb  3_Literature-Review.ipynb  Neue_Konzepte.ipynb
